--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
             [[diff]] entries ahead</div>
 
            <div ng-show="(latest - today) == 0" class="ontrack ng-hide">
-            [[diff]] today latest!</div>
+            [[diff]]</div>
 
            <div ng-show="(latest - today) < 0" class="ng-binding ng-hide">
             [[ - diff]] entries behind</div>
